objects/pse__VersionItem_ProjectDetail__c.object
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of project record data taken at the time the version is created.</description>
    <fields>
        <fullName>pse__AccountId__c</fullName>
        <description>The ID of the Account listed on the project referenced in the version.</description>
        <inlineHelpText>The ID of the Account listed on the project referenced in the version.</inlineHelpText>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__AccountName__c</fullName>
        <description>The account name on the project referenced in the version.</description>
        <inlineHelpText>The account name on the project referenced in the version.</inlineHelpText>
        <label>Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Type__c</fullName>
        <description>The billing type on the project referenced in the version.</description>
        <inlineHelpText>The billing type on the project referenced in the version.</inlineHelpText>
        <label>Billing Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <description>The end date for the project referenced in the version.</description>
        <inlineHelpText>The end date for the project referenced in the version.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__GroupId__c</fullName>
        <description>The group ID on the project referenced in the version.</description>
        <inlineHelpText>The group ID on the project referenced in the version.</inlineHelpText>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__GroupName__c</fullName>
        <description>The group name on the project referenced in the version.</description>
        <inlineHelpText>The group name on the project referenced in the version.</inlineHelpText>
        <label>Group Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The active flag on the project referenced in the version.</description>
        <inlineHelpText>The active status on the project referenced in the version.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The billable status on the project referenced in the version.</description>
        <inlineHelpText>The billable flag on the project referenced in the version.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__OpportunityId__c</fullName>
        <description>The opportunity ID on the project referenced in the version.</description>
        <inlineHelpText>The opportunity ID on the project referenced in the version.</inlineHelpText>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OpportunityName__c</fullName>
        <description>The opportunity name on the project referenced in the version.</description>
        <inlineHelpText>The opportunity name on the project referenced in the version.</inlineHelpText>
        <label>Opportunity Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedById__c</fullName>
        <description>The original created by ID for the project referenced in the version.</description>
        <inlineHelpText>The original created by ID for the project referenced in the version.</inlineHelpText>
        <label>Original Created By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedByName__c</fullName>
        <description>The original created by name for the project referenced in the version.</description>
        <inlineHelpText>The original created by name for the project referenced in the version.</inlineHelpText>
        <label>Original Created By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedDate__c</fullName>
        <description>The original created date for the project referenced in the version.</description>
        <inlineHelpText>The original created date for the project referenced in the version.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalId__c</fullName>
        <description>The original ID of the project referenced in the version.</description>
        <inlineHelpText>The original ID of the project referenced in the version.</inlineHelpText>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedById__c</fullName>
        <description>The original last modified by ID for the project referenced in the version.</description>
        <inlineHelpText>The original last modified by ID for the project referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedByName__c</fullName>
        <description>The original last modified by name for the project referenced in the version.</description>
        <inlineHelpText>The original last modified by name for the project referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedDate__c</fullName>
        <description>The original last modified date of the project referenced in the version.</description>
        <inlineHelpText>The original last modified date of the project referenced in the version.</inlineHelpText>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerId__c</fullName>
        <description>The original owner ID for the project referenced in the version.</description>
        <inlineHelpText>The original owner ID for the project referenced in the version.</inlineHelpText>
        <label>Original Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerName__c</fullName>
        <description>The original owner name for the project referenced in the version.</description>
        <inlineHelpText>The original owner name for the project referenced in the version.</inlineHelpText>
        <label>Original Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__PracticeId__c</fullName>
        <description>The practice ID on the project referenced in the version.</description>
        <inlineHelpText>The practice ID on the project referenced in the version.</inlineHelpText>
        <label>Practice Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__PracticeName__c</fullName>
        <description>The practice name on the project referenced in the version.</description>
        <inlineHelpText>The practice name on the project referenced in the version.</inlineHelpText>
        <label>Practice Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_ManagerId__c</fullName>
        <description>The ID of the project manager listed on the project referenced in the version.</description>
        <inlineHelpText>The ID of the project manager listed on the project referenced in the version.</inlineHelpText>
        <label>Project Manager Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_ManagerName__c</fullName>
        <description>The project manager listed on the project referenced in the version.</description>
        <inlineHelpText>The project manager listed on the project referenced in the version.</inlineHelpText>
        <label>Project Manager Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Name__c</fullName>
        <description>The name of the project referenced in the version.</description>
        <inlineHelpText>The name of the project referenced in the version.</inlineHelpText>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Phase__c</fullName>
        <description>The project phase for the project referenced in the version.</description>
        <inlineHelpText>The project phase for the project referenced in the version.</inlineHelpText>
        <label>Project Phase</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Status__c</fullName>
        <description>The project status for the project referenced in the version.</description>
        <inlineHelpText>The project status for the project referenced in the version.</inlineHelpText>
        <label>Project Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Type__c</fullName>
        <description>The project type on the project referenced in version.</description>
        <inlineHelpText>The project type on the project referenced in version.</inlineHelpText>
        <label>Project Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__RegionId__c</fullName>
        <description>The region ID on the project referenced in the version.</description>
        <inlineHelpText>The region ID on the project referenced in the version.</inlineHelpText>
        <label>Region Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__RegionName__c</fullName>
        <description>The region name on the project referenced in the version.</description>
        <inlineHelpText>The region name on the project referenced in the version.</inlineHelpText>
        <label>Region Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Stage__c</fullName>
        <description>The stage for the project referenced in the version.</description>
        <inlineHelpText>The stage for the project referenced in the version.</inlineHelpText>
        <label>Stage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>The start date for the project referenced in the version.</description>
        <inlineHelpText>The start date for the project referenced in the version.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Total_Costs__c</fullName>
        <description>The total costs on the project referenced in the project.</description>
        <inlineHelpText>The total costs on the project referenced in the project.</inlineHelpText>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Version__c</fullName>
        <description>A lookup to the version.</description>
        <inlineHelpText>A lookup to the version.</inlineHelpText>
        <label>Version</label>
        <referenceTo>pse__Version__c</referenceTo>
        <relationshipLabel>Version Item Project Details</relationshipLabel>
        <relationshipName>VersionItem_ProjectDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Version Item Project Detail</label>
    <nameField>
        <displayFormat>PVD-{0000}</displayFormat>
        <label>Version Item Project Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Project Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>